Fix margins to be consistent
I accidentally had a different sized margin for left / right,
leading everything to be ever so slightly off center. Oops! That's now
fixed. :)

--- a/styles/screen.css
+++ b/styles/screen.css
@@ -3,8 +3,7 @@ body {
     font-family: 'Exo 2', sans-serif;
     font-size: 75%;
     line-height: 1.5em;
-    margin-left: 1em;
-    margin-top: 1em;
+    margin: 1em;
 }
 
 /* Link Styling */
